--- a/link_source/src/main/AndroidManifest.xml
+++ b/link_source/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="androidx.lifecycle.liveevent.core">
+    package="androidx.lifecycle.liveevent.linksource">
 
 </manifest>
