--- a/core/build.gradle
+++ b/core/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -41,5 +42,15 @@ dependencies {
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compileOnly "androidx.lifecycle:lifecycle-livedata-core:2.3.1"
     compileOnly "androidx.lifecycle:lifecycle-common:2.3.1"
+    compileOnly "androidx.appcompat:appcompat:1.3.0"
     compileOnly project(":link_source")
+
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.core:core-ktx:1.3.2'
+    androidTestImplementation 'androidx.appcompat:appcompat:1.3.0'
+    androidTestImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:core-ktx:1.3.0'
+    androidTestImplementation "androidx.lifecycle:lifecycle-livedata-core:2.3.1"
+    androidTestImplementation "androidx.lifecycle:lifecycle-common:2.3.1"
 }
