--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".mutable.LikeLiveDataDemoActivity"/>
-        <activity android:name=".mutable.NoLossDemoActivity"/>
-        <activity android:name=".mutable.NoStickyDemoActivity"/>
-        <activity android:name=".mutable.NoStickyNoLossDemoActivity"/>
-        <activity android:name=".mutable.MixedLiveEventDemoActivity"/>
-        <activity android:name=".mutable.MixedBackgroundLiveEventDemoActivity"/>
+        <activity android:name=".LikeLiveDataDemoActivity"/>
+        <activity android:name=".NoLossDemoActivity"/>
+        <activity android:name=".NoStickyDemoActivity"/>
+        <activity android:name=".NoStickyNoLossDemoActivity"/>
+        <activity android:name=".mixed.MixedLiveEventDemoActivity"/>
+        <activity android:name=".mixed.MixedBackgroundLiveEventDemoActivity"/>
         <activity android:name=".other.SpecifiedThreadToObserveDemoActivity"/>
     </application>
 
