--- a/lifecycle-liveevent-core/build.gradle
+++ b/lifecycle-liveevent-core/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply from: "../publish-jitpack.gradle"
+apply from: "../publish.gradle"
 
 
 android {
@@ -40,10 +40,10 @@ android {
 
 dependencies {
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compileOnly "androidx.lifecycle:lifecycle-livedata-core:2.3.1"
     compileOnly "androidx.lifecycle:lifecycle-common:2.3.1"
     compileOnly "androidx.appcompat:appcompat:1.3.0"
     compileOnly project(":link_source")
+    implementation "androidx.lifecycle:lifecycle-livedata-core:2.3.1"
 
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.core:core-ktx:1.3.2'
