--- a/publish-jitpack.gradle
+++ b/publish-jitpack.gradle
@@ -1,15 +1,14 @@
 group = 'com.github.wangdaqi77'
-version = "1.3.0"
 afterEvaluate {
     if (plugins.hasPlugin('com.android.library')) {
-        apply plugin: 'maven-publish'
         def buildType = "release"
         publishing {
             publications {
                 "${buildType}"(MavenPublication) {
+                    artifact sourceJar
                     from components."${buildType}"
-                    groupId = 'com.github.wangdaqi77'
-                    artifactId = "${project.name}"
+                    groupId = project.group
+                    artifactId = project.name
                     version = project.version
                 }
             }
@@ -28,18 +27,16 @@ afterEvaluate {
         }
     }else {
         apply plugin: 'java-library'
-        apply plugin: 'maven-publish'
-
         publishing {
             publications {
                 release(MavenPublication) {
+                    artifact sourceJar
                     from components.java
-                    groupId = group
-                    artifactId = "${project.name}"
+                    groupId = project.group
+                    artifactId = project.name
                     version = project.version
                 }
             }
         }
     }
-
 }
